[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Cenario/Cemiterio/Parede.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Cenario/Cemiterio/Chao.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Cenario/Cemiterio/Porta.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Cenario/Cemiterio/Externo.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Cenario/Cemiterio/Escada.png" type="Texture" id=6]
[ext_resource path="res://Cenas/Inimigos.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/Seres/Player.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/UiPlayer.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/Ui_AlmaGrande.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UI/Ui_AlmaPequena.png" type="Texture" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=5]
0/name = "Parede.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Chao.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 2 )
1/shapes = [  ]
1/z_index = 0
2/name = "Porta.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Externo.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Escada.png 4"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0

[sub_resource type="GDScript" id=6]

[node name="Tutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65512, 3, 0, -65511, 3, 0, -65510, 3, 0, -65509, 3, 0, -65508, 3, 0, -65507, 3, 0, -65506, 3, 0, -65505, 3, 0, -65504, 3, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, 0, 655381, 0, 11, 3, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 3, 0, 24, 3, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 3, 0, 36, 0, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 0, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65547, 3, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 3, 0, 65560, 3, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 65566, 1, 0, 65567, 1, 0, 65568, 3, 0, 65572, 0, 0, 65573, 1, 0, 65574, 1, 0, 65575, 1, 0, 65576, 1, 0, 65577, 1, 0, 65578, 1, 0, 65579, 1, 0, 65580, 1, 0, 65581, 0, 0, 131073, 3, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 3, 0, 131083, 3, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 3, 0, 131096, 3, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 131102, 1, 0, 131103, 1, 0, 131104, 3, 0, 131108, 0, 0, 131109, 1, 0, 131110, 1, 0, 131111, 1, 0, 131112, 1, 0, 131113, 1, 0, 131114, 1, 0, 131115, 1, 0, 131116, 1, 0, 131117, 0, 0, 196609, 3, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 3, 0, 196632, 3, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 196636, 1, 0, 196637, 1, 0, 196638, 1, 0, 196639, 1, 0, 196640, 3, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 1, 0, 196646, 1, 0, 196647, 1, 0, 196648, 1, 0, 196649, 1, 0, 196650, 1, 0, 196651, 1, 0, 196652, 1, 0, 196653, 0, 0, 262145, 3, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 1, 0, 262173, 1, 0, 262174, 1, 0, 262175, 1, 0, 262176, 1, 0, 262177, 1, 0, 262178, 1, 0, 262179, 1, 0, 262180, 1, 0, 262181, 1, 0, 262182, 1, 0, 262183, 1, 0, 262184, 1, 0, 262185, 1, 0, 262186, 1, 0, 262187, 1, 0, 262188, 1, 0, 262189, 0, 0, 327681, 3, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 3, 0, 327704, 3, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, 1, 0, 327709, 1, 0, 327710, 1, 0, 327711, 1, 0, 327712, 3, 0, 327713, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 327717, 1, 0, 327718, 1, 0, 327719, 1, 0, 327720, 1, 0, 327721, 1, 0, 327722, 1, 0, 327723, 1, 0, 327724, 1, 0, 327725, 0, 0, 393217, 3, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 3, 0, 393240, 3, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 3, 0, 393252, 0, 0, 393253, 1, 0, 393254, 1, 0, 393255, 1, 0, 393256, 1, 0, 393257, 1, 0, 393258, 1, 0, 393259, 1, 0, 393260, 1, 0, 393261, 0, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458776, 3, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 458784, 3, 0, 458788, 0, 0, 458789, 1, 0, 458790, 1, 0, 458791, 1, 0, 458792, 1, 0, 458793, 1, 0, 458794, 1, 0, 458795, 1, 0, 458796, 1, 0, 458797, 0, 0, 524312, 3, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 524320, 3, 0, 524324, 0, 0, 524325, 1, 0, 524326, 1, 0, 524327, 1, 0, 524328, 1, 0, 524329, 1, 0, 524330, 1, 0, 524331, 4, 0, 524332, 1, 0, 524333, 0, 0, 589848, 3, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 589855, 1, 0, 589856, 3, 0, 589860, 0, 0, 589861, 1, 0, 589862, 1, 0, 589863, 1, 0, 589864, 1, 0, 589865, 1, 0, 589866, 1, 0, 589867, 1, 0, 589868, 1, 0, 589869, 0, 0, 655384, 3, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0, 655390, 1, 0, 655391, 1, 0, 655392, 3, 0, 655396, 0, 0, 655397, 0, 0, 655398, 0, 0, 655399, 0, 0, 655400, 0, 0, 655401, 0, 0, 655402, 0, 0, 655403, 0, 0, 655404, 0, 0, 655405, 0, 0, 720920, 3, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720928, 3, 0, 786456, 3, 0, 786457, 1, 0, 786458, 1, 0, 786459, 1, 0, 786460, 1, 0, 786461, 1, 0, 786462, 1, 0, 786463, 1, 0, 786464, 3, 0, 851992, 3, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 852000, 3, 0, 917528, 3, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 917536, 3, 0, 983064, 3, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 983072, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 3, 0, 1048603, 3, 0, 1048604, 3, 0, 1048605, 3, 0, 1048606, 3, 0, 1048607, 3, 0, 1048608, 3, 0 )

[node name="Inimigos" parent="." instance=ExtResource( 7 )]
visible = true
position = Vector2( 471.738, 128.263 )
frame = 3
script = null

[node name="Inimigos1" parent="." instance=ExtResource( 7 )]
visible = true
position = Vector2( 825.202, 179.233 )
frame = 0
script = null

[node name="Inimigos2" parent="." instance=ExtResource( 7 )]
visible = true
position = Vector2( 824.127, 262.496 )
script = null

[node name="Inimigos3" parent="." instance=ExtResource( 7 )]
visible = true
position = Vector2( 818.112, 335.356 )
scale = Vector2( 1.09654, 1 )
frame = 6
script = null

[node name="Inimigos4" parent="." instance=ExtResource( 7 )]
visible = true
position = Vector2( 826.702, 422.89 )
frame = 4
script = null

[node name="Player" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 308.585, 166.131 )
texture = ExtResource( 8 )
centered = false
hframes = 2
frame = 1
script = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="Setas" type="Label" parent="."]
margin_left = 101.053
margin_top = 80.0003
margin_right = 256.053
margin_bottom = 128.0
text = "Use as setas 
direcionais para 
se mover"

[node name="Inimigo" type="Label" parent="."]
margin_left = 409.475
margin_top = 30.5264
margin_right = 594.475
margin_bottom = 78.5264
text = "Se mova em direcao 
aos inimigos para atacar eles"

[node name="Almas" type="Label" parent="."]
visible = false
margin_left = 406.317
margin_top = 31.5791
margin_right = 596.317
margin_bottom = 79.5791
text = "Ao morrer eles deixam cair
 sua alma no chao. 
Passe por cima para pegar ela"

[node name="Almas2" type="Label" parent="."]
margin_left = 816.829
margin_top = 20.1759
margin_right = 1006.83
margin_bottom = 68.1759
text = "Cada alma tem um 
efeito diferente
Aperte ESPACO para usa-la"

[node name="Almas3" type="Label" parent="."]
margin_left = 859.984
margin_top = 175.301
margin_right = 1049.98
margin_bottom = 223.301
text = "A arvore deixa cair a 
alma verde, ela aumenta
a sua resistencia "

[node name="Almas4" type="Label" parent="."]
margin_left = 861.151
margin_top = 255.78
margin_right = 1051.15
margin_bottom = 303.78
text = "O vampiro deixa cair a 
alma azul, ela regenera
a sua vida"

[node name="Almas5" type="Label" parent="."]
margin_left = 864.518
margin_top = 405.556
margin_right = 1054.52
margin_bottom = 470.556
text = "O fantasma deixa cair a 
alma branca, ela diminui
 a chance de acerto de 
ataques inimigos"

[node name="Almas6" type="Label" parent="."]
margin_left = 861.261
margin_top = 328.095
margin_right = 1051.26
margin_bottom = 393.095
text = "O esqueleto deixa cair a 
alma vermelha, ela 
devolve dano ao inimigo 
que te acertar"

[node name="Final" type="Label" parent="."]
margin_left = 1215.51
margin_top = 6.4579
margin_right = 1883.51
margin_bottom = 71.4579
text = "Agora voce esta pronto 
para sua aventura, desca
a escada para conhecer 
o mundo de Elemental Cemitery"

[node name="UI" type="CanvasLayer" parent="."]

[node name="HP" type="ColorRect" parent="UI"]
margin_left = 71.7531
margin_top = 310.489
margin_right = 111.753
margin_bottom = 350.489
rect_scale = Vector2( 3.68, 0.507753 )
color = Color( 0, 1, 0, 1 )

[node name="UiPlayer" type="Sprite" parent="UI"]
position = Vector2( 114.021, 316.854 )
texture = ExtResource( 9 )
hframes = 5

[node name="Alma1" type="Sprite" parent="UI"]
position = Vector2( 40.5428, 313.777 )
texture = ExtResource( 10 )
hframes = 5
frame = 2

[node name="Alma2" type="Sprite" parent="UI"]
position = Vector2( 74.8526, 341.4 )
texture = ExtResource( 11 )
hframes = 5
frame = 2

[node name="Alma3" type="Sprite" parent="UI"]
position = Vector2( 87.895, 341.356 )
texture = ExtResource( 11 )
hframes = 5
frame = 2

[node name="Alma4" type="Sprite" parent="UI"]
position = Vector2( 100.981, 341.444 )
texture = ExtResource( 11 )
hframes = 5
frame = 2

[node name="Alma5" type="Sprite" parent="UI"]
position = Vector2( 113.848, 341.356 )
texture = ExtResource( 11 )
hframes = 5
frame = 2

[node name="Alma6" type="Sprite" parent="UI"]
position = Vector2( 126.978, 341.268 )
texture = ExtResource( 11 )
hframes = 5
frame = 2

[node name="Alma7" type="Sprite" parent="UI"]
position = Vector2( 139.846, 341.444 )
texture = ExtResource( 11 )
hframes = 5
frame = 2

[node name="Alma8" type="Sprite" parent="UI"]
position = Vector2( 153.326, 341.531 )
texture = ExtResource( 11 )
hframes = 5
frame = 2

[node name="Alma9" type="Sprite" parent="UI"]
position = Vector2( 165.887, 341.312 )
texture = ExtResource( 11 )
hframes = 5
frame = 2

[node name="Alma10" type="Sprite" parent="UI"]
position = Vector2( 178.973, 341.225 )
texture = ExtResource( 11 )
hframes = 5
frame = 2
